# edge-face-recognition-v2

./: README.md  pyproject.toml
src/edge_face/: cli.py  config.py
